# python-cv

./: .dockerignore  .editorconfig  .flake8  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  cli.py  noxfile.py  pyproject.toml
.github/: ISSUE_TEMPLATE.md
.github/workflows/: pr-rule.yml  pylint.yml  test.yml
benchmarks/: load_file.py
pythoncv/: __init__.py  utils.py
pythoncv/core/: __init__.py  io.py
pythoncv/core/types/: __init__.py  display.py  dtype.py  filter.py  image.py  video.py
pythoncv/functions/: __init__.py  blur.py  filters.py  utils.py
pythoncv/io/: __init__.py  base.py  display.py  image.py  video.py
pythoncv/models/: __init__.py  video.py
pythoncv/transformers/: __init__.py  base.py  common.py
pythoncv/transformers/filters/: blur.py
pythoncv/types/: __init__.py  display.py  filter.py  image.py  video.py
tests/: __init__.py  utils.py
tests/functions/: test_blur_function.py
tests/io/: test_display.py  test_image.py  test_video.py
tests/transformers/filters/: test_blur.py
